LinkWithDropdown: fix align

--- a/components/link-with-dropdown/LinkWithDropdown.module.scss
+++ b/components/link-with-dropdown/LinkWithDropdown.module.scss
@@ -166,6 +166,7 @@
 
   .textWithExpander {
     display: flex;
+    align-items: center;
     gap: 4px;
 
     .expander {
